--- a/index.html
+++ b/index.html
@@ -110,12 +110,12 @@
       <!-- 1 -->
       <article class="item">
         <div class="item-media">
-          <img src="catalogo1.jpg" alt="Churrasqueira em tijolinho com granito" loading="lazy">
+          <img src="catalogo1.pnj" alt="Churrasqueira em alvenaria revestida" loading="lazy">
         </div>
         <div class="item-body">
-          <h3 class="item-title">Churrasqueira tijolinho + granito</h3>
-          <p class="item-desc">Estrutura em alvenaria, revestimento tijolinho aparente, prateleira em granito e dutos dimensionados para melhor exaustão.</p>
-          <p class="item-price">Preço aproximado: R$ 9.800</p>
+          <h3 class="item-title">Churrasqueira em alvenaria revestida</h3>
+          <p class="item-desc">Estrutura em alvenaria, revestimento em ceramica a escolha do cliente. Granito e grelhas por conta do cliente.</p>
+          <p class="item-price">Preço aproximado: R$ 3.000,00</p>
           <p class="item-note">Valores variam conforme medidas, materiais e acabamentos.</p>
         </div>
       </article>
