Update image sources and descriptions in index.html

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       <!-- 1 -->
       <article class="item">
         <div class="item-media">
-          <img src="catalogo1.pnj" alt="Churrasqueira em alvenaria revestida" loading="lazy">
+          <img src="catalogo1.png" alt="Churrasqueira em alvenaria revestida" loading="lazy">
         </div>
         <div class="item-body">
           <h3 class="item-title">Churrasqueira em alvenaria revestida</h3>
@@ -123,13 +123,13 @@
       <!-- 2 -->
       <article class="item">
         <div class="item-media">
-          <img src="catalogo2.jpg" alt="Conjunto fogão a lenha com forno" loading="lazy">
+          <img src="catalogo2.png" alt="Churrasqueira em tijolinho a vista" loading="lazy">
         </div>
         <div class="item-body">
           <h3 class="item-title">Fogão a lenha + forno</h3>
-          <p class="item-desc">Conjunto integrado com tampa de ferro, forno com porta de vidro e base reforçada. Ideal para área gourmet completa.</p>
-          <p class="item-price">Preço aproximado: R$ 12.500</p>
-          <p class="item-note">Personalizamos layout, nichos e pedras.</p>
+          <p class="item-desc">Churrasqueira em tijolinho a vista, com arco redondo e espaço para guardar carvão.</p>
+          <p class="item-price">Preço aproximado: R$ 3.500,00</p>
+          <p class="item-note">Icluso material e mão de obra.</p>
         </div>
       </article>
 
