Update product descriptions and images in index.html

--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
           <img src="catalogo2.png" alt="Churrasqueira em tijolinho a vista" loading="lazy">
         </div>
         <div class="item-body">
-          <h3 class="item-title">Fogão a lenha + forno</h3>
-          <p class="item-desc">Churrasqueira em tijolinho a vista, com arco redondo e espaço para guardar carvão.</p>
+          <h3 class="item-title">Churrasqueira em tijolinho a vista</h3>
+          <p class="item-desc">Construída em tijolinho a vista, com arco redondo e espaço para guardar carvão, grelha e granito por conta do cliente.</p>
           <p class="item-price">Preço aproximado: R$ 3.500,00</p>
           <p class="item-note">Icluso material e mão de obra.</p>
         </div>
@@ -136,13 +136,13 @@
       <!-- 3 -->
       <article class="item">
         <div class="item-media">
-          <img src="catalogo3.jpg" alt="Ilha gourmet revestida em porcelanato madeira" loading="lazy">
+          <img src="catalogo3.png" alt="Dupla Churrasqueira e fogão" loading="lazy">
         </div>
         <div class="item-body">
-          <h3 class="item-title">Ilha gourmet porcelanato madeira</h3>
-          <p class="item-desc">Revestimento premium tipo madeira, tampos em granito e recortes para cooktop a lenha. Estética moderna e durável.</p>
-          <p class="item-price">Preço aproximado: R$ 15.900</p>
-          <p class="item-note">Cores e padrões sob consulta.</p>
+          <h3 class="item-title">Churrasqueira e fogão a lenha</h3>
+          <p class="item-desc">Construída em tijolinho a vista, tradicional churrasqueira mais fogão a lenha, Chapa, grelha e granito por conta do cliente.</p>
+          <p class="item-price">Preço aproximado: R$ 6.000,00</p>
+          <p class="item-note">Incluso Material e mão de obra.</p>
         </div>
       </article>
 
