--- a/index.html
+++ b/index.html
@@ -149,13 +149,13 @@
       <!-- 4 -->
       <article class="item">
         <div class="item-media">
-          <img src="catalogo4.jpg" alt="Fogão a lenha com detalhes em ladrilho" loading="lazy">
+          <img src="catalogo4.jpg" alt="Trio Churrasqueira,forno e fogão a lenha" loading="lazy">
         </div>
         <div class="item-body">
-          <h3 class="item-title">Fogão a lenha com ladrilhos</h3>
-          <p class="item-desc">Design com faixas de ladrilho hidráulico e base ampliada para apoio. Combina tradição e personalidade.</p>
-          <p class="item-price">Preço aproximado: R$ 11.700</p>
-          <p class="item-note">Opções de cores e desenhos.</p>
+          <h3 class="item-title">Trio Churrasqueira,forno e fogão a lenha</h3>
+          <p class="item-desc">Conjunto de cozinha externa/área gourmet construído em tijolinho à vista na cor terracota, apresentando um design robusto e funcional. O complexo integra uma churrasqueira, um forno a lenha e um fogão à lenha. Porta, chapa, grelha e granitos por conta do cliente.</p>
+          <p class="item-price">Preço aproximado: R$ 10.700</p>
+          <p class="item-note">Incluso material e mão de obra.</p>
         </div>
       </article>
 
