Replace image source from catalogo4.jpg to catalogo4.png

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
       <!-- 4 -->
       <article class="item">
         <div class="item-media">
-          <img src="catalogo4.jpg" alt="Trio Churrasqueira,forno e fogão a lenha" loading="lazy">
+          <img src="catalogo4.png" alt="Trio Churrasqueira,forno e fogão a lenha" loading="lazy">
         </div>
         <div class="item-body">
           <h3 class="item-title">Trio Churrasqueira,forno e fogão a lenha</h3>
