Fix formatting and update prices in index.html

--- a/index.html
+++ b/index.html
@@ -149,12 +149,12 @@
       <!-- 4 -->
       <article class="item">
         <div class="item-media">
-          <img src="catalogo4.png" alt="Trio Churrasqueira,forno e fogão a lenha" loading="lazy">
+          <img src="catalogo4.png" alt="Trio Churrasqueira, forno e fogão a lenha" loading="lazy">
         </div>
         <div class="item-body">
-          <h3 class="item-title">Trio Churrasqueira,forno e fogão a lenha</h3>
+          <h3 class="item-title">Trio Churrasqueira, forno e fogão a lenha</h3>
           <p class="item-desc">Conjunto de cozinha externa/área gourmet construído em tijolinho à vista na cor terracota, apresentando um design robusto e funcional. O complexo integra uma churrasqueira, um forno a lenha e um fogão à lenha. Porta, chapa, grelha e granitos por conta do cliente.</p>
-          <p class="item-price">Preço aproximado: R$ 10.700</p>
+          <p class="item-price">Preço aproximado: R$ 10.700,00</p>
           <p class="item-note">Incluso material e mão de obra.</p>
         </div>
       </article>
@@ -162,13 +162,13 @@
       <!-- 5 -->
       <article class="item">
         <div class="item-media">
-          <img src="catalogo5.jpg" alt="Chaminé externa em tijolo maciço" loading="lazy">
+          <img src="catalogo5.png" alt="Trio Churrasqueira, forno iglu e fogão a lenha" loading="lazy">
         </div>
         <div class="item-body">
-          <h3 class="item-title">Chaminé externa tijolo maciço</h3>
-          <p class="item-desc">Execução técnica para exaustão adequada, capa superior e acabamento resistente às intempéries.</p>
-          <p class="item-price">Preço aproximado: R$ 6.900</p>
-          <p class="item-note">Inclui dimensionamento da saída.</p>
+          <h3 class="item-title">Trio Churrasqueira, forno iglu e fogão a lenha</h3>
+          <p class="item-desc">Linda churrasqueira, fogão a lenha e forno iglu para pizzas construida em tijolinho a vista. Porta, chapa, gralhas e granito por conta do cliente.</p>
+          <p class="item-price">Preço aproximado: R$ 11.800,00</p>
+          <p class="item-note">Incluso material e mão de obra.</p>
         </div>
       </article>
 
