Update item descriptions and images in index.html

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         </div>
         <div class="item-body">
           <h3 class="item-title">Churrasqueira e fogão a lenha</h3>
-          <p class="item-desc">Construída em tijolinho a vista, tradicional churrasqueira mais fogão a lenha, Chapa, grelha e granito por conta do cliente.</p>
+          <p class="item-desc">Construída em tijolinho a vista, tradicional churrasqueira mais fogão a lenha. Chapa, grelha e granito por conta do cliente.</p>
           <p class="item-price">Preço aproximado: R$ 6.000,00</p>
           <p class="item-note">Incluso Material e mão de obra.</p>
         </div>
@@ -166,7 +166,7 @@
         </div>
         <div class="item-body">
           <h3 class="item-title">Trio Churrasqueira, forno iglu e fogão a lenha</h3>
-          <p class="item-desc">Linda churrasqueira, fogão a lenha e forno iglu para pizzas construida em tijolinho a vista. Porta, chapa, gralhas e granito por conta do cliente.</p>
+          <p class="item-desc">Linda churrasqueira, fogão a lenha e forno iglu para pizzas construídos em tijolinho a vista. Porta, chapa, gralhas e granito por conta do cliente.</p>
           <p class="item-price">Preço aproximado: R$ 11.800,00</p>
           <p class="item-note">Incluso material e mão de obra.</p>
         </div>
@@ -175,13 +175,13 @@
       <!-- 6 -->
       <article class="item">
         <div class="item-media">
-          <img src="catalogo6.jpg" alt="Churrasqueira com bordas arredondadas" loading="lazy">
+          <img src="catalogo6.png" alt="4x1 Churrasqueira, fogão, forno e forno iglu" loading="lazy">
         </div>
         <div class="item-body">
-          <h3 class="item-title">Churrasqueira bordas arredondadas</h3>
-          <p class="item-desc">Visual robusto, cantos boleados, grelhas deslizantes e prateleira em pedra natural.</p>
-          <p class="item-price">Preço aproximado: R$ 10.900</p>
-          <p class="item-note">Compatível com parrilla ou bafo.</p>
+          <h3 class="item-title">4x1 Churrasqueira, fogão, forno quadrado e forno para pizza</h3>
+          <p class="item-desc">Visual robusto, cantos boleados, sua área gourmet completa, contendo churrasqueira, forno a lenha, forno, e forno de pizza no formato iglu, construído em tijolinho a vista. Portas, chapas, grelhas e granitos por conta do Cliente.</p>
+          <p class="item-price">Preço aproximado: R$ 13.900,00</p>
+          <p class="item-note">Incluso Material e maào de obra.</p>
         </div>
       </article>
 
