--- a/index.html
+++ b/index.html
@@ -201,37 +201,37 @@
       <!-- 8 -->
       <article class="item">
         <div class="item-media">
-          <img src="catalogo8.jpg" alt="Churrasqueira slim de embutir" loading="lazy">
+          <img src="catalogo8.png" alt="Forno e fogão a lenha" loading="lazy">
         </div>
         <div class="item-body">
-          <h3 class="item-title">Churrasqueira slim de embutir</h3>
-          <p class="item-desc">Modelo compacto para espaços reduzidos, mantendo a eficiência e o acabamento premium.</p>
+          <h3 class="item-title">Forno e fogão a lenha</h3>
+          <p class="item-desc">Modelo moderno, mantendo a eficiência e o acabamento premium, revestimento a escolha do cliente, construído em alvenaria. Acessórios por conta do Cliente..</p>
           <p class="item-price">Preço aproximado: R$ 7.800</p>
-          <p class="item-note">Ideal para varandas menores.</p>
+          <p class="item-note">IIncluso material e mão de obra.</p>
         </div>
       </article>
 
       <!-- 9 -->
       <article class="item">
         <div class="item-media">
-          <img src="catalogo9.jpg" alt="Conjunto branco com forno e grelha" loading="lazy">
+          <img src="catalogo9.png" alt="Conjunto Churrasqueira e forno" loading="lazy">
         </div>
         <div class="item-body">
-          <h3 class="item-title">Conjunto branco com forno</h3>
-          <p class="item-desc">Acabamento claro sofisticado, grelha com níveis e forno com porta trabalhada.</p>
-          <p class="item-price">Preço aproximado: R$ 14.400</p>
-          <p class="item-note">Acabamentos finos sob medida.</p>
+          <h3 class="item-title">2x1 Churrasqueira e forno</h3>
+          <p class="item-desc">Churrasqueira e forno construídos em tijolinho a vista. Brinde porta. Granito e grelhas por conta do cliente.</p>
+          <p class="item-price">Preço aproximado: R$ 8.800,00</p>
+          <p class="item-note">Incluso material e mão de obra.</p>
         </div>
       </article>
 
       <!-- 10 -->
       <article class="item">
         <div class="item-media">
-          <img src="catalogo10.jpg" alt="Churrasqueira básica pronta para receber revestimento" loading="lazy">
+          <img src="catalogo10.png" alt="Churrasqueira e fogão" loading="lazy">
         </div>
         <div class="item-body">
-          <h3 class="item-title">Churrasqueira — base pronta</h3>
-          <p class="item-desc">Estrutura executada e preparada para receber o revestimento de sua preferência.</p>
+          <h3 class="item-title">Churrasqueira e fogão a lenha em L</h3>
+          <p class="item-desc">Estrutura executada e preparada para receber o revestimento de sua preferência. Modelo compacto para espaços reduzidos, mantendo a eficiência e o acabamento premium, churrasqueira e fogão a lenha em L construídos em tijolinho a vista. Brinde chapa. Granito por conta do cliente.</p>
           <p class="item-price">Preço aproximado: R$ 6.200</p>
           <p class="item-note">Escolha porcelanatos, pedras ou tijolinho.</p>
         </div>
