--- a/index.html
+++ b/index.html
@@ -188,13 +188,13 @@
       <!-- 7 -->
       <article class="item">
         <div class="item-media">
-          <img src="catalogo7.jpg" alt="Fogão a lenha com duas abóbadas" loading="lazy">
+          <img src="catalogo7.png" alt="Projeto personalizado" loading="lazy">
         </div>
         <div class="item-body">
-          <h3 class="item-title">Fogão a lenha — dupla abóbada</h3>
-          <p class="item-desc">Base com dois arcos, tampo em granito e nichos de apoio. Clássico e funcional.</p>
-          <p class="item-price">Preço aproximado: R$ 9.600</p>
-          <p class="item-note">Portas e puxadores personalizáveis.</p>
+          <h3 class="item-title">Projeto personalizado</h3>
+          <p class="item-desc">Personlizamos seu projeto com estrura e materiais a sua escolha.</p>
+          <p class="item-price">Preço aproximado: a combinar </p>
+          <p class="item-note">Você escolhe e nós executamos para você.</p>
         </div>
       </article>
 
