--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
       <!-- 10 -->
       <article class="item">
         <div class="item-media">
-          <img src="catalogo10.png" alt="Churrasqueira e fogão" loading="lazy">
+          <img src="Catalogo10.png" alt="Churrasqueira e fogão" loading="lazy">
         </div>
         <div class="item-body">
           <h3 class="item-title">Churrasqueira e fogão a lenha em L</h3>
