Update item descriptions and prices in index.html

--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
         </div>
         <div class="item-body">
           <h3 class="item-title">Churrasqueira em alvenaria revestida</h3>
-          <p class="item-desc">Estrutura em alvenaria, revestimento em ceramica a escolha do cliente. Granito e grelhas por conta do cliente.</p>
-          <p class="item-price">Preço aproximado: R$ 3.000,00</p>
+          <p class="item-desc">Estrutura em alvenaria, revestimento em ceramica a escolha do cliente. Granito por conta do cliente.</p>
+          <p class="item-price">Preço médio: R$ 5.500,00</p>
           <p class="item-note">Valores variam conforme medidas, materiais e acabamentos.</p>
         </div>
       </article>
@@ -127,8 +127,8 @@
         </div>
         <div class="item-body">
           <h3 class="item-title">Churrasqueira em tijolinho a vista</h3>
-          <p class="item-desc">Construída em tijolinho a vista, com arco redondo e espaço para guardar carvão, grelha e granito por conta do cliente.</p>
-          <p class="item-price">Preço aproximado: R$ 3.500,00</p>
+          <p class="item-desc">Construída em tijolinho a vista, com arco redondo e espaço para guardar carvão. Granito por conta do cliente.</p>
+          <p class="item-price">Preço médio: R$ 5.500,00</p>
           <p class="item-note">Icluso material e mão de obra.</p>
         </div>
       </article>
@@ -140,8 +140,8 @@
         </div>
         <div class="item-body">
           <h3 class="item-title">Churrasqueira e fogão a lenha</h3>
-          <p class="item-desc">Construída em tijolinho a vista, tradicional churrasqueira mais fogão a lenha. Chapa, grelha e granito por conta do cliente.</p>
-          <p class="item-price">Preço aproximado: R$ 6.000,00</p>
+          <p class="item-desc">Construída em tijolinho a vista, tradicional churrasqueira mais fogão a lenha. Granito por conta do cliente.</p>
+          <p class="item-price">Preço médio: R$ 10.000,00</p>
           <p class="item-note">Incluso Material e mão de obra.</p>
         </div>
       </article>
@@ -153,8 +153,8 @@
         </div>
         <div class="item-body">
           <h3 class="item-title">Trio Churrasqueira, forno e fogão a lenha</h3>
-          <p class="item-desc">Conjunto de cozinha externa/área gourmet construído em tijolinho à vista na cor terracota, apresentando um design robusto e funcional. O complexo integra uma churrasqueira, um forno a lenha e um fogão à lenha. Porta, chapa, grelha e granitos por conta do cliente.</p>
-          <p class="item-price">Preço aproximado: R$ 10.700,00</p>
+          <p class="item-desc">Conjunto de cozinha externa/área gourmet construído em tijolinho à vista na cor terracota, apresentando um design robusto e funcional. O complexo integra uma churrasqueira, um forno a lenha e um fogão à lenha. Granitos por conta do cliente.</p>
+          <p class="item-price">Preço médio: R$ 12.000,00</p>
           <p class="item-note">Incluso material e mão de obra.</p>
         </div>
       </article>
@@ -166,8 +166,8 @@
         </div>
         <div class="item-body">
           <h3 class="item-title">Trio Churrasqueira, forno iglu e fogão a lenha</h3>
-          <p class="item-desc">Linda churrasqueira, fogão a lenha e forno iglu para pizzas construídos em tijolinho a vista. Porta, chapa, gralhas e granito por conta do cliente.</p>
-          <p class="item-price">Preço aproximado: R$ 11.800,00</p>
+          <p class="item-desc">Linda churrasqueira, fogão a lenha e forno iglu para pizzas construídos em tijolinho a vista. Granitos por conta do cliente.</p>
+          <p class="item-price">Preço médio: R$ 13.000,00</p>
           <p class="item-note">Incluso material e mão de obra.</p>
         </div>
       </article>
@@ -179,8 +179,8 @@
         </div>
         <div class="item-body">
           <h3 class="item-title">4x1 Churrasqueira, fogão, forno quadrado e forno para pizza</h3>
-          <p class="item-desc">Visual robusto, cantos boleados, sua área gourmet completa, contendo churrasqueira, forno a lenha, forno, e forno de pizza no formato iglu, construído em tijolinho a vista. Portas, chapas, grelhas e granitos por conta do Cliente.</p>
-          <p class="item-price">Preço aproximado: R$ 13.900,00</p>
+          <p class="item-desc">Visual robusto, cantos boleados, sua área gourmet completa, contendo churrasqueira, forno a lenha, forno, e forno de pizza no formato iglu, construído em tijolinho a vista. Granitos e portas de madeira por conta do Cliente.</p>
+          <p class="item-price">Preço médio: R$ 18.000,00</p>
           <p class="item-note">Incluso Material e maào de obra.</p>
         </div>
       </article>
@@ -193,8 +193,8 @@
         <div class="item-body">
           <h3 class="item-title">Projeto personalizado</h3>
           <p class="item-desc">Personlizamos seu projeto com estrura e materiais a sua escolha.</p>
-          <p class="item-price">Preço aproximado: a combinar </p>
-          <p class="item-note">Você escolhe e nós executamos para você.</p>
+          <p class="item-price">Preço médio: R$7.000,00 </p>
+          <p class="item-note">Somente mão de obra. Você escolhe e nós executamos para você.</p>
         </div>
       </article>
 
@@ -204,10 +204,10 @@
           <img src="catalogo8.png" alt="Forno e fogão a lenha" loading="lazy">
         </div>
         <div class="item-body">
-          <h3 class="item-title">Forno e fogão a lenha</h3>
+          <h3 class="item-title">Forno e fogão a lenha Personalizados</h3>
           <p class="item-desc">Modelo moderno, mantendo a eficiência e o acabamento premium, revestimento a escolha do cliente, construído em alvenaria. Acessórios por conta do Cliente..</p>
-          <p class="item-price">Preço aproximado: R$ 7.800</p>
-          <p class="item-note">IIncluso material e mão de obra.</p>
+          <p class="item-price">Preço médio: R$ 7.000,00</p>
+          <p class="item-note">Somente mão de obra.</p>
         </div>
       </article>
 
@@ -218,8 +218,8 @@
         </div>
         <div class="item-body">
           <h3 class="item-title">2x1 Churrasqueira e forno</h3>
-          <p class="item-desc">Churrasqueira e forno construídos em tijolinho a vista. Brinde porta. Granito e grelhas por conta do cliente.</p>
-          <p class="item-price">Preço aproximado: R$ 8.800,00</p>
+          <p class="item-desc">Churrasqueira e forno construídos em tijolinho a vista. Granito por conta do cliente.</p>
+          <p class="item-price">Preço médio: R$ 10.000,00</p>
           <p class="item-note">Incluso material e mão de obra.</p>
         </div>
       </article>
@@ -232,8 +232,8 @@
         <div class="item-body">
           <h3 class="item-title">Churrasqueira e fogão a lenha em L</h3>
           <p class="item-desc">Estrutura executada e preparada para receber o revestimento de sua preferência. Modelo compacto para espaços reduzidos, mantendo a eficiência e o acabamento premium, churrasqueira e fogão a lenha em L construídos em tijolinho a vista. Brinde chapa. Granito por conta do cliente.</p>
-          <p class="item-price">Preço aproximado: R$ 6.200</p>
-          <p class="item-note">Escolha porcelanatos, pedras ou tijolinho.</p>
+          <p class="item-price">Preço médio: R$ 10.000,00</p>
+          <p class="item-note">Inclosos material e mão de obra.</p>
         </div>
       </article>
 
