Fix typo in item note in index.html

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
           <h3 class="item-title">Churrasqueira e fogão a lenha em L</h3>
           <p class="item-desc">Estrutura executada e preparada para receber o revestimento de sua preferência. Modelo compacto para espaços reduzidos, mantendo a eficiência e o acabamento premium, churrasqueira e fogão a lenha em L construídos em tijolinho a vista. Brinde chapa. Granito por conta do cliente.</p>
           <p class="item-price">Preço médio: R$ 10.000,00</p>
-          <p class="item-note">Inclosos material e mão de obra.</p>
+          <p class="item-note">Inclusos material e mão de obra.</p>
         </div>
       </article>
 
