--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 
     <!-- 8 -->
     <article class="item">
-      <div class="item-media"><img src="catalogo88.png" alt=""></div>
+      <div class="item-media"><img src="88.png" alt=""></div>
       <div class="item-body">
         <h3 class="item-title">Forno e Fogão personalizados</h3>
         <p class="item-desc">Modelo moderno com revestimento à escolha do cliente.</p>
@@ -254,7 +254,7 @@
 
     <!-- 9 -->
     <article class="item">
-      <div class="item-media"><img src="catalogo99.png" alt=""></div>
+      <div class="item-media"><img src="99.png" alt=""></div>
       <div class="item-body">
         <h3 class="item-title">2×1 Churrasqueira e Forno</h3>
         <p class="item-desc">Estrutura clássica em tijolinho à vista.</p>
