Update item description for churrasqueira

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
       <div class="item-media"><img src="catalogo1.png" alt=""></div>
       <div class="item-body">
         <h3 class="item-title">Churrasqueira em alvenaria revestida</h3>
-        <p class="item-desc">Estrutura em alvenaria e revestimento à escolha do cliente.</p>
+        <p class="item-desc">Estrutura em alvenaria e revestimento à escolha do cliente. Revestimento e Granito por conta do Cliente.</p>
         <p class="item-price">Preço médio: R$ 5.500,00</p>
         <p class="item-note">Valores variam conforme medidas, materiais e acabamentos.</p>
       </div>
