Update header text for parcel simulator section

--- a/index.html
+++ b/index.html
@@ -272,9 +272,11 @@
         <p class="item-price">Preço médio: R$ 10.000,00</p>
         <p class="item-note">Inclui material e mão de obra.</p>
       </div>
+
+      
       <!-- ===== SIMULADOR DE PARCELAS (cole a partir daqui) ===== -->
 <section id="simulador" class="wrap simulador">
-  <h2>Simule aqui seu parcelamento</h2>
+  <h2>SIMULE AQUI SEU PARCELAMENTO NOS CARTÕES DE CRÉDITO</h2>
 
   <div class="sim-form">
     <label for="simValor">Valor da compra (R$)</label>
