--- a/index.html
+++ b/index.html
@@ -169,9 +169,9 @@
       <div class="item-media"><img src="catalogo1.png" alt=""></div>
       <div class="item-body">
         <h3 class="item-title">Churrasqueira em alvenaria revestida</h3>
-        <p class="item-desc">Estrutura em alvenaria e revestimento à escolha do cliente. Revestimento e Granito por conta do Cliente.</p>
+        <p class="item-desc">Estrutura em alvenaria e revestimento à escolha do cliente. </p>
         <p class="item-price">Preço médio: R$ 5.500,00</p>
-        <p class="item-note">Valores variam conforme medidas, materiais e acabamentos.</p>
+        <p class="item-note">Valores variam conforme medidas, materiais e acabamentos. Revestimento e Granito por conta do Cliente.</p>
       </div>
     </article>
 
@@ -182,7 +182,7 @@
         <h3 class="item-title">Churrasqueira em tijolinho à vista</h3>
         <p class="item-desc">Construção tradicional em tijolinho à vista com arco redondo.</p>
         <p class="item-price">Preço médio: R$ 5.500,00</p>
-        <p class="item-note">Incluso material e mão de obra.</p>
+        <p class="item-note">Incluso material e mão de obra. Granito por conta do Cliente.</p>
       </div>
     </article>
 
@@ -193,7 +193,7 @@
         <h3 class="item-title">Churrasqueira + Fogão a lenha</h3>
         <p class="item-desc">Conjunto compacto e funcional, acabamento em tijolinho à vista.</p>
         <p class="item-price">Preço médio: R$ 10.000,00</p>
-        <p class="item-note">Incluso material e mão de obra.</p>
+        <p class="item-note">Incluso material e mão de obra. Granito por conta do Cliente.</p>
       </div>
     </article>
 
@@ -204,7 +204,7 @@
         <h3 class="item-title">Trio Churrasqueira, forno e fogão</h3>
         <p class="item-desc">Projeto robusto completo em tijolinho terracota.</p>
         <p class="item-price">Preço médio: R$ 12.000,00</p>
-        <p class="item-note">Granito por conta do cliente.</p>
+        <p class="item-note">Incluso material e mão de obra. Granito por conta do Cliente.</p>
       </div>
     </article>
 
@@ -215,7 +215,7 @@
         <h3 class="item-title">Trio com forno iglu</h3>
         <p class="item-desc">Churrasqueira, fogão e forno iglu — ideal para pizzas.</p>
         <p class="item-price">Preço médio: R$ 13.000,00</p>
-        <p class="item-note">Incluso material e mão de obra.</p>
+        <p class="item-note">Incluso material e mão de obra. Granito por conta do Cliente.</p>
       </div>
     </article>
 
@@ -226,7 +226,7 @@
         <h3 class="item-title">4×1 Completo</h3>
         <p class="item-desc">Churrasqueira, fogão, forno quadrado e forno de pizza.</p>
         <p class="item-price">Preço médio: R$ 18.000,00</p>
-        <p class="item-note">Acabamento premium e projeto completo.</p>
+        <p class="item-note">Acabamento premium e projeto completo.Incluso material e mão de obra. Granito por conta do Cliente.</p>
       </div>
     </article>
 
@@ -259,7 +259,7 @@
         <h3 class="item-title">2×1 Churrasqueira e Forno</h3>
         <p class="item-desc">Estrutura clássica em tijolinho à vista.</p>
         <p class="item-price">Preço médio: R$ 10.000,00</p>
-        <p class="item-note">Incluso material e mão de obra.</p>
+        <p class="item-note">Incluso material e mão de obra. Granito por conta do Cliente.</p>
       </div>
     </article>
 
@@ -270,9 +270,9 @@
         <h3 class="item-title">Conjunto em L</h3>
         <p class="item-desc">Churrasqueira + fogão a lenha em L para espaços compactos.</p>
         <p class="item-price">Preço médio: R$ 10.000,00</p>
-        <p class="item-note">Inclui material e mão de obra.</p>
-      </div>
-
+        <p class="item-note">Incluso material e mão de obra. Granito por conta do Cliente.</p>
+     </div>
+    </article>
       
       <!-- ===== SIMULADOR DE PARCELAS (cole a partir daqui) ===== -->
 <section id="simulador" class="wrap simulador">
