--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@
         <p class="item-desc">Estrutura em alvenaria e revestimento à escolha do cliente. </p>
         <p class="item-price">Preço médio: R$ 5.500,00</p>
         <p class="item-note">Valores variam conforme medidas, materiais e acabamentos. Revestimento e Granito por conta do Cliente.</p>
+        <p class="item-note">Valores podem variar de acordo com a distância, por conta do deslocamento.</p>
       </div>
     </article>
 
@@ -183,6 +184,7 @@
         <p class="item-desc">Construção tradicional em tijolinho à vista com arco redondo.</p>
         <p class="item-price">Preço médio: R$ 5.500,00</p>
         <p class="item-note">Incluso material e mão de obra. Granito por conta do Cliente.</p>
+        <p class="item-note">Valores podem variar de acordo com a distância, por conta do deslocamento.</p>
       </div>
     </article>
 
@@ -194,6 +196,7 @@
         <p class="item-desc">Conjunto compacto e funcional, acabamento em tijolinho à vista.</p>
         <p class="item-price">Preço médio: R$ 10.000,00</p>
         <p class="item-note">Incluso material e mão de obra. Granito por conta do Cliente.</p>
+        <p class="item-note">Valores podem variar de acordo com a distância, por conta do deslocamento.</p>
       </div>
     </article>
 
@@ -205,6 +208,7 @@
         <p class="item-desc">Projeto robusto completo em tijolinho terracota.</p>
         <p class="item-price">Preço médio: R$ 12.000,00</p>
         <p class="item-note">Incluso material e mão de obra. Granito por conta do Cliente.</p>
+        <p class="item-note">Valores podem variar de acordo com a distância, por conta do deslocamento.</p>
       </div>
     </article>
 
@@ -216,6 +220,7 @@
         <p class="item-desc">Churrasqueira, fogão e forno iglu — ideal para pizzas.</p>
         <p class="item-price">Preço médio: R$ 13.000,00</p>
         <p class="item-note">Incluso material e mão de obra. Granito por conta do Cliente.</p>
+        <p class="item-note">Valores podem variar de acordo com a distância, por conta do deslocamento.</p>
       </div>
     </article>
 
@@ -227,6 +232,7 @@
         <p class="item-desc">Churrasqueira, fogão, forno quadrado e forno de pizza.</p>
         <p class="item-price">Preço médio: R$ 18.000,00</p>
         <p class="item-note">Acabamento premium e projeto completo.Incluso material e mão de obra. Granito por conta do Cliente.</p>
+        <p class="item-note">Valores podem variar de acordo com a distância, por conta do deslocamento.</p>
       </div>
     </article>
 
@@ -238,6 +244,7 @@
         <p class="item-desc">Execução sob medida de acordo com suas escolhas.</p>
         <p class="item-price">Preço médio: R$ 7.000,00</p>
         <p class="item-note">Somente mão de obra.</p>
+        <p class="item-note">Valores podem variar de acordo com a distância, por conta do deslocamento.</p>
       </div>
     </article>
 
@@ -249,6 +256,7 @@
         <p class="item-desc">Modelo moderno com revestimento à escolha do cliente.</p>
         <p class="item-price">Preço médio: R$ 7.000,00</p>
         <p class="item-note">Somente mão de obra.</p>
+        <p class="item-note">Valores podem variar de acordo com a distância, por conta do deslocamento.</p>
       </div>
     </article>
 
@@ -260,6 +268,7 @@
         <p class="item-desc">Estrutura clássica em tijolinho à vista.</p>
         <p class="item-price">Preço médio: R$ 10.000,00</p>
         <p class="item-note">Incluso material e mão de obra. Granito por conta do Cliente.</p>
+        <p class="item-note">Valores podem variar de acordo com a distância, por conta do deslocamento.</p>
       </div>
     </article>
 
@@ -271,7 +280,8 @@
         <p class="item-desc">Churrasqueira + fogão a lenha em L para espaços compactos.</p>
         <p class="item-price">Preço médio: R$ 10.000,00</p>
         <p class="item-note">Incluso material e mão de obra. Granito por conta do Cliente.</p>
-     </div>
+        <p class="item-note">Valores podem variar de acordo com a distância, por conta do deslocamento.</p>
+      </div>
     </article>
       
       <!-- ===== SIMULADOR DE PARCELAS (cole a partir daqui) ===== -->
